@@ -1,3 +1,7 @@
+2012-10-24  Sergey Kashyrin <ska@kiska.net>
+
+   * intrinsic.c : Prevent cob_intr_binop to use double (float) and loose precision (bug #37).
+
 2012-10-23  Sergey Kashyrin <ska@kiska.net>
 
    * fileio.c : Prevent runtime crash when ASSIGN is missing in SELECT FILE.
